--- a/moa01/src/main/webapp/WEB-INF/web.xml
+++ b/moa01/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://JAVA.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee; https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd http://java.sun.com/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee" version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://JAVA.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee; https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/spring/root-context.xml</param-value>
@@ -85,5 +85,15 @@
   <servlet-mapping>
     <servlet-name>MemberController</servlet-name>
     <url-pattern>/MemberController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LoginInterceptor</display-name>
+    <servlet-name>LoginInterceptor</servlet-name>
+    <servlet-class>moa.interceptor.LoginInterceptor</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginInterceptor</servlet-name>
+    <url-pattern>/LoginInterceptor</url-pattern>
   </servlet-mapping>
 </web-app>
